--- a/index.html
+++ b/index.html
@@ -3,54 +3,49 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash Register manager</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="section">
+    <main class="container">
         <h1>Cash Register Manager</h1>
-        <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return</p>
-        <div>
-            <div class="label">Bill amount:</div>
-            <input type="number" id="billAmt">
-            <button id="nextBtn">Click Next</button>
-        </div>
-        <div class=cashGivenInput>
-            <div class="label">Cash given:</div>
-            <input type="number" id="cashGiven">
-            <button id="checkBtn">Check</button>
-        </div>
-        <div class="errMessage"></div>
+        <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
+        <label for="bill-amount">Bill Amount</label>
+        <input type="number" id="bill-amount" />
+        <label for="cash-given">Cash Given</label>
+        <input type="number" id="cash-given" />
+        <button id="check-btn">check</button>
+        <p id="error-msg"></p>
+        <table class="note-table">
+            <caption>
+                Return Change
+            </caption>
 
-        <div class="changereturn">
-            <div class="label">Return change:</div>
-            <div id="output">
-                <table>
-                    <tr>
-                        <th>No of notes</td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                            <td class="noOfNotes"></td>
-                    </tr>
-                    <tr>
-                        <th>notes</td>
-                            <td>2000</td>
-                            <td>500</td>
-                            <td>100</td>
-                            <td>20</td>
-                            <td>10</td>
-                            <td>5</td>
-                            <td>1</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </section>
+            <tr>
+                <th>No.of Notes</th>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+            </tr>
+            <tr>
+                <th>Note</th>
+                <td>2000</td>
+                <td>500</td>
+                <td>100</td>
+                <td>20</td>
+                <td>10</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+        </table>
+    </main>
     <script src="app.js"></script>
 </body>
 
